Bug 922896 - Fire tap immediately if content is not zoomable. r=kats